# oldGitKit

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: README.md  gitkit
cli/docs/: slides.html  svn-to-git.md
cli/lib/: add.sh  ci.sh  common.sh  diff.sh  exp.sh  help.sh  log.sh  mg.sh  push.sh  reset.sh  st.sh  up.sh
cli/tests/: run.sh
docs/: code-review.md
docs/architecture/: layers.md
docs/backend/: git-1.8-command-map.md
docs/slides/: README.md  index.html
docs/ui/: tree-dag-rendering.md
src/gitkit/: __init__.py  __main__.py  _askpass.py
src/gitkit/backend/: base.py  capabilities.py  cli_git.py
src/gitkit/core/: flow.py  models.py
src/gitkit/graph/: lanes.py
src/gitkit/ui/: app.py  diffview.py
tests/: test_cache.py  test_info.py  test_lanes.py  test_parsers.py  test_queue.py  test_staleness.py  test_tree.py  test_writes.py
